--- a/src/leabra/Makefile.am
+++ b/src/leabra/Makefile.am
@@ -1,8 +1,8 @@
-PROJNAME = leabra
 #*********************************************************
 #  Process this file with automake to produce Makefile.in
 #*********************************************************
-
+PROJNAME = leabra
+DEFS=
 srcdir = @srcdir@
 VPATH = @srcdir@
 
@@ -23,7 +23,6 @@ SRCS =\
 	main.cpp
 
 include $(top_srcdir)/Maketa.am
-MAKETA_FLAGS += $(leabra@PDP_SUFFIX@_la_CPPFLAGS)
 
 bin_PROGRAMS = leabra@PDP_SUFFIX@++
 leabra@PDP_SUFFIX@___SOURCES = $(HEADS) $(SRCS)
@@ -32,14 +31,13 @@ leabra@PDP_SUFFIX@___LDADD =\
 	$(abs_top_builddir)/src/tamisc/libtamisc@PDP_SUFFIX@.la \
 	$(abs_top_builddir)/src/ta/libta@PDP_SUFFIX@.la \
 	$(abs_top_builddir)/src/css/libcss@PDP_SUFFIX@.la
-leabra@PDP_SUFFIX@___LDFLAGS = @X_LIBS@
 leabra@PDP_SUFFIX@___CPPFLAGS =\
 	-I@srcdir@/../ta \
 	-I@srcdir@/../pdp \
 	-I@srcdir@/../tamisc \
-	-I@srcdir@/../css
-
-leabra@PDP_SUFFIX@___CXXFLAGS = @PTHREAD_CFLAGS@ @X_CFLAGS@ @QT_CXXFLAGS@
+	-I@srcdir@/../css \
+	-I@srcdir@/../taiqtso \
+	-I/usr/include/freetype2
 
 BUILT_SOURCES = leabra_TA_type.h leabra_TA_inst.h leabra_TA.cpp
 
@@ -52,74 +50,10 @@ if TA_GUI
 
 leabra@PDP_SUFFIX@___LDADD +=\
 	$(abs_top_builddir)/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
-
-leabra@PDP_SUFFIX@___CPPFLAGS +=\
-	-I@srcdir@/../taiqtso \
-	-I/usr/include/freetype2 \
-	-DTA_GUI \
-	-DTA_USE_QT \
-	-DTA_USE_INVENTOR \
-	-DQT_SHARED
-
-endif
-#**************************************************
-#
-#                      NOGUI
-#
-#**************************************************
-if NO_TA_GUI
-
-leabra@PDP_SUFFIX@___CPPFLAGS += -DTA_NO_GUI
-
-endif
-#**************************************************
-#
-#                      DEBUG
-#
-#**************************************************
-if DEBUG
-
-leabra@PDP_SUFFIX@___CPPFLAGS +=\
-	-DYYDEBUG \
-	-DDEBUG \
-	-DTA_PROFILE \
-	-DHAVE_POSIX_SIGNALS=1
-
-leabra@PDP_SUFFIX@___CXXFLAGS += -Wno-non-virtual-dtor
-
-endif
-#**************************************************
-#
-#                      MPI
-#
-#**************************************************
-if MPI
-
-leabra@PDP_SUFFIX@___CPPFLAGS += -DDMEM_COMPILE
-
-endif
-#**************************************************
-#
-#                      LINUX
-#
-#**************************************************
-if LINUX
-
-leabra@PDP_SUFFIX@___CPPFLAGS += -DLINUX
-
-endif
-#**************************************************
-#
-#                      DARWIN
-#
-#**************************************************
-if DARWIN
-
-leabra@PDP_SUFFIX@___CPPFLAGS += -DLINUX -DDARWIN
-
 endif
 
 clean-local:
-	-rm *TA*
+	-rm *TA_*
 	-rm *moc*
 	-rm *~
+	-rm *\#*
