New rules for maketa do not result in a race condition when doing a parallel build.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,5 @@
-# SUBDIRS tells the autotools
-# which directories have Makefile.am's in them.
-# If you remove/add one of SUBDIRS, be sure to
-# do the same at the bottom of configure.ac
+# SUBDIRS tells the autotools which directories have Makefile.am's in them.
+# If you remove/add one of SUBDIRS, be sure to do the same at the bottom of configure.ac
 
 dist_pkgdata_DATA = AUTHORS ChangeLog COPYING COPYING.LIB INSTALL NEWS README
 
@@ -24,28 +22,7 @@ dist-hook:
 		$(distdir)/src/ta/ta_maketa_defs.h
 
 
-# Counts the number of lines in *.h and *.cpp files
+# Count the number of lines in *.h and *.cpp files
 
 linecount:
 	@ wc --lines `find -name "*.cpp" -printf '%p ' -o -name "*.h" -printf '%p '` | grep total
-
-clean-local:
-	-rm *TA_*
-	-rm *moc*
-	-rm *~*
-	-rm *\#*
-
-
-# Use this when building using distcc to avoid race conditions to run all maketa's and then build.
-# They are dangerous because quite often two instances of maketa will run and one will get cut off,
-# leaving a partially completed *TA* file.
-# ./configure && make cluster
-cluster:
-	make clean
-	cd src/maketa && make
-	cd src/ta && make force_ta
-	cd src/tamisc && make force_ta
-	cd src/pdp && make force_ta
-	cd src/leabra && make force_ta
-	cd src/bp && make force_ta
-	make -j54
