--- a/src/tamisc/Makefile.am
+++ b/src/tamisc/Makefile.am
@@ -111,10 +111,7 @@ libtamisc@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I/usr/include/freetype2 \
 	-I${QTDIR}/include
 
-BUILT_SOURCES = tamisc_TA_type.h tamisc_TA_inst.h tamisc_TA.cpp
+BUILT_SOURCES = tamisc_TA_type.h
 
 clean-local:
-	-rm *TA*
 	-rm *moc*
-	-rm *~*
-	-rm *\#*
