--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@ AM_INIT_AUTOMAKE([-Wall -Werror])
 PDP_DETERMINE_OSTYPE
 
 # Disable shared libraries
-#AC_DISABLE_SHARED
+AC_DISABLE_SHARED
 
 # Set default language  C++
 
