--- a/src/tamisc/Makefile.am
+++ b/src/tamisc/Makefile.am
@@ -99,6 +99,7 @@ SRCS =\
 
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/Moc.am
+include $(top_srcdir)/mfstamp.am
 
 lib_LTLIBRARIES = libtamisc@PDP_SUFFIX@.la
 libtamisc@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
